--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "bcryptjs": "^3.0.2",
+    "firebase": "^12.6.0",
     "next": "15.4.6",
     "next-auth": "^4.24.11",
     "prisma": "^6.14.0",
