fix: clean duplicate avatar function and stabilize avatar page (no errors)

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next-auth": "^4.24.11",
     "prisma": "^6.14.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
