--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
