--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.14.0",
     "bcryptjs": "^3.0.2",
     "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "next": "15.4.6",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
